# forage

./: .gitignore  CONTRIBUTING.md  Dockerfile  GOOD_FIRST_ISSUES.md  HALL_OF_FAME.md  LICENSE  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  config-reference.md  launch-tweets.md  quickstart.md
docs/research/: 00-VISION.md  01-PRIOR-ART.md  02-ECONOMICS.md  03-EVOLUTION-ENGINE.md  04-ARCHITECTURE.md  05-SELF-IMPROVEMENT.md  06-BIOLOGY-MAPPING.md  07-ONCHAIN.md  08-SAFETY.md  09-BUILD-PLAN.md  10-OPEN-SOURCE.md  11-ORGANISM.md
examples/: crypto-trader.yaml  gpu-beast.yaml  minimal.yaml
forage/: __init__.py  cli.py
forage/agent/: core.py  genome.py  memory.py  organism.py  skills.py  survival.py
forage/capabilities/: base.py  content.py  digital_product.py
forage/economy/: ledger.py  payout.py  revenue.py  wallet.py
forage/evolution/: engine.py  fitness.py  genome_store.py  mutation.py
forage/infra/: config.py  dashboard.py  database.py  llm.py  scheduler.py
forage/safety/: audit.py  killswitch.py  limits.py
tests/: conftest.py  test_evolution.py  test_revenue.py  test_wallet.py
